--- a/About.html
+++ b/About.html
@@ -21,18 +21,14 @@
       </div>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l	flex flex-wrap items-center text-base justify-center">
         <div class="navbar flex-div">
-            <img src="./Images/home.png" alt="">
             <a class="mr-5 hover:text-gray-900" style=" color: black;  font-weight: 500;" href="index.html">Home</a>
-            <img src="./Images/shop.png" alt="">  
             <a class="mr-5 hover:text-gray-900" style=" transition: 0.2s; color: black;  font-weight: 500" href="Shop.html">Shop</a>
-            <img src="./Images/Blog.png" alt="">
             <a class="mr-5 hover:text-gray-900" style=" transition: 0.2s; color: black;  font-weight: 500" href="Blog.html">Blog</a>
-            <img src="./Images/about.png" alt="">
             <a class="mr-5 hover:text-gray-900" style=" border-radius: 15px; background-color: #48aad8; transition: 0.2s; color: black;  font-weight: 500" href="About.html">About</a>
         </div>
         <div class="navbar flex-div">
             <div class="dropdown ">
-              <button style="transition: 0.2s;" class="dropbtn"><img src="./Images/show-more.png" alt="">More
+              <button style="transition: 0.2s;" class="dropbtn">More
               </button>
               <div class="dropdown-content">
                 <a href="ProductError.html">Video</a>
