--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="navbar flex-div">
             <div class="dropdown ">
-              <button style="transition: 0.2s;" class="dropbtn"><img src="./Images/show-more.png" alt="">More
+              <button style="transition: 0.2s;" class="dropbtn">More
               </button>
               <div class="dropdown-content">
                 <a href="ProductError.html">Video</a>
