--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="stl.css">
     <link rel="stylesheet" type="text/css" href="Background.css">
+
 </head>
 <style>
   body {margin:0;height:2000px;}
@@ -68,7 +69,7 @@
   </style>
 <body>
 
-  <header class="text-black-600 body-font">
+  <header class="text-black-600 body-font disp">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <div>
         <img src="./Images/logo.png" alt="">
@@ -95,9 +96,13 @@
               </div>
             </div> 
           </div>
+        
+        
+
       </nav>
     </div>
   </header>
+
 
 
 
