--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div class="callout-header">Spipixel</div>
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
       <div class="callout-container">
-        <p>if you want join our minecraft server -<p style=" font-weight: 100px; font-size: 18px;">spipixelnetwork.tk , <a style="color: blue;" href="Learn-More.html">Learn More</a> </p></p>
+        <p>if you want join our minecraft server -<p style=" font-weight: 100px; font-size: 18px;">play.spipixelnetwork.tk , <a style="color: blue;" href="Learn-More.html">Learn More</a> </p></p>
       </div>
     </div>
 
