--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
     margin-left: 75px;
     font-size: 30px;
   }
+
+  .view:hover {
+    background-color: #224f64;
+  }
+
+  .callout{
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5) ;
+  }
   </style>
 <body>
 
@@ -131,23 +139,23 @@
     <section class="text-gray-600 body-font overflow-hidden">
         <div class="container px-5 py-24 mx-auto">
           <div class="-my-8 divide-y-2 divide-gray-100">
-            <div class="py-8 flex flex-wrap md:flex-nowrap">
-              <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-                <span class="font-semibold title-font text-gray-700">Science</span>
-                <span class="mt-1 text-gray-500 text-sm">10/5/2022</span>
+              <div style="box-shadow: 2px 2px 5px rgba(0,0,0,0.2); background: #f3f3f3; padding: 20px; border-radius: 20px; margin: 10px; margin-top: 20px;" class="py-8 flex flex-wrap md:flex-nowrap">
+                <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+                  <span class="font-semibold title-font text-gray-700">Science</span>
+                  <span class="mt-1 text-gray-500 text-sm">10/5/2022</span>
+                </div>
+                <div class="md:flex-grow">
+                  <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Science Free Download From Here</h2>
+                  <p class="leading-relaxed">This Page you can find all Chapters of Science notes </p>
+                  <a class="text-indigo-500 inline-flex items-center mt-4"><p style="cursor: pointer;" id="Esdesae123" onclick="science()">Download</p>
+                    <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                      <path d="M5 12h14"></path>
+                      <path d="M12 5l7 7-7 7"></path>
+                    </svg>
+                  </a>
+                </div>
               </div>
-              <div class="md:flex-grow">
-                <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Science Free Download From Here</h2>
-                <p class="leading-relaxed">This Page you can find all Chapters of Science notes </p>
-                <a href="./pages/Science.html" class="text-indigo-500 inline-flex items-center mt-4">Download
-                  <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M5 12h14"></path>
-                    <path d="M12 5l7 7-7 7"></path>
-                  </svg>
-                </a>
-              </div>
-            </div>
-            <div class="py-8 flex flex-wrap md:flex-nowrap">
+            <div style="box-shadow: 2px 2px 5px rgba(0,0,0,0.2); background: #f3f3f3; padding: 20px; border-radius: 20px; margin: 10px;" class="py-8 flex flex-wrap md:flex-nowrap">
               <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
                 <span class="font-semibold title-font text-gray-700">Maths</span>
                 <span class="mt-1 text-gray-500 text-sm">10/5/2022</span>
@@ -155,7 +163,7 @@
               <div class="md:flex-grow">
                 <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Maths Free Download From Here</h2>
                 <p class="leading-relaxed">This Page you can find all Chapters of Maths notes</p>
-                <a href="Error Page.html"  class="text-indigo-500 inline-flex items-center mt-4">Download
+                <a class="text-indigo-500 inline-flex items-center mt-4"><p style="cursor: pointer;" id="3rx1w3d" onclick="math()">Download</p>
                   <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
                     <path d="M12 5l7 7-7 7"></path>
@@ -163,7 +171,7 @@
                 </a>
               </div>
             </div>
-            <div class="py-8 flex flex-wrap md:flex-nowrap">
+            <div style="box-shadow: 2px 2px 5px rgba(0,0,0,0.2); background: #f3f3f3; padding: 20px; border-radius: 20px; margin: 10px; margin-block-end: 30px;" class="py-8 flex flex-wrap md:flex-nowrap">
               <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
                 <span class="font-semibold title-font text-gray-700">Social Sciencs</span>
                 <span class="text-sm text-gray-500">10/5/2022</span>
@@ -171,7 +179,7 @@
               <div class="md:flex-grow">
                 <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">All Chapters notes of CBSE Social Science Free Download From Here</h2>
                 <p class="leading-relaxed">This Page you can find all Chapters of Social Science notes</p>
-                <a href="Error Page.html" class="text-indigo-500 inline-flex items-center mt-4">Download
+                <a href="spipixel.tk" target="blank" class="text-indigo-500 inline-flex items-center mt-4"><p style="cursor: pointer;" id="vfs23ess" onclick="sscience()">Download</p>
                   <svg class="w-4 h-4 ml-2" viewbox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
                     <path d="M12 5l7 7-7 7"></path>
@@ -188,12 +196,12 @@
       <div class="callout-header">Spipixel</div>
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
       <div class="callout-container">
-        <p>if you want join our minecraft server -<p style=" font-weight: 100px; font-size: 18px;">play.spipixelnetwork.tk , <a style="color: blue;" href="Learn-More.html">Learn More</a> </p></p>
+        <p>Cirtificates of my Achievement from free online course <a class="view" style=" border-radius: 7px; padding: 5px; background-color: #48aad8; color: rgb(0, 0, 0);" href="./Cirtificates/python.html">View</a> </p>
       </div>
     </div>
 
 
-    <hr>
+    <hr style="padding: 0; margin-top: 10px; background: none; margin: 10px; background-color: none;">
 
       <footer class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
@@ -280,6 +288,9 @@
           </div>
         </div>
       </footer>
+
+
+      <script src="./Component/js/event.js"></script>
 
 </body>
 </html>
