--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <div class="callout-header">Spipixel</div>
       <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
       <div class="callout-container">
-        <p>Cirtificates of my Achievement from free online course <a class="view" style=" border-radius: 7px; padding: 5px; background-color: #48aad8; color: rgb(0, 0, 0);" href="./Cirtificates/python.html">View</a> </p>
+        <p>Cirtificates of my Achievement from free online course  <button style="background: black; border-radius: 7px; padding: 5px; width: 100px; margin-left: 10px;" href="./Cirtificates/python.html" class="w3-button w3-round-large">View</button> </p>
       </div>
     </div>
 
