--- a/Blog.html
+++ b/Blog.html
@@ -58,39 +58,39 @@
           <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">Spipixel </h1>
           <div class="h-1 w-20 bg-indigo-500 rounded"></div>
         </div>
-        <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them man bun deep jianbing selfies heirloom prism food truck ugh squid celiac humblebrag.</p>
+        <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">This is a blog page in which a new products and videos are shown first , when they are published in the web </p>
       </div>
       <div class="flex flex-wrap -m-4">
         <div class="xl:w-1/4 md:w-1/2 p-4">
           <div class="bg-gray-100 p-6 rounded-lg">
-            <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/720x400" alt="content">
-            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">SUBTITLE</h3>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Chichen Itza</h2>
-            <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+            <img style="cursor: pointer;" onclick="document.location.href='./Shop/Windows_11_project_2_8_22_24_00.html'" class="h-40 rounded w-full object-cover object-center mb-6" src="./Images/Shop/wp7520964.png" alt="content">
+            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">Spipixel</h3>
+            <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Windows 11</h2>
+            <p class="leading-relaxed text-base">This is a windows 11 project that made by spipixel and I provide the source code of it for free </p>
           </div>
         </div>
         <div class="xl:w-1/4 md:w-1/2 p-4">
           <div class="bg-gray-100 p-6 rounded-lg">
             <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/721x401" alt="content">
-            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">SUBTITLE</h3>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Colosseum Roma</h2>
-            <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">Spipixel</h3>
+            <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Spipixel</h2>
+            <p class="leading-relaxed text-base">Coming Soon</p>
           </div>
         </div>
         <div class="xl:w-1/4 md:w-1/2 p-4">
           <div class="bg-gray-100 p-6 rounded-lg">
             <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/722x402" alt="content">
-            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">SUBTITLE</h3>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Great Pyramid of Giza</h2>
-            <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">Spipixel</h3>
+            <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Coming Soon</h2>
+            <p class="leading-relaxed text-base">Coming Soon</p>
           </div>
         </div>
         <div class="xl:w-1/4 md:w-1/2 p-4">
           <div class="bg-gray-100 p-6 rounded-lg">
             <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403" alt="content">
-            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">SUBTITLE</h3>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-4">San Francisco</h2>
-            <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+            <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">Spipixel</h3>
+            <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Coming Soon</h2>
+            <p class="leading-relaxed text-base">Coming Soon</p>
           </div>
         </div>
       </div>
@@ -101,90 +101,55 @@
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-col text-center w-full mb-20">
         <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Our Team</h1>
-        <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them.</p>
+        <p class="lg:w-2/3 mx-auto leading-relaxed text-base">This is our , I know all work I do but one team memmber is manage our minecraft server. </p>
       </div>
       <div class="flex flex-wrap -m-2">
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
           <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/80x80">
+            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
             <div class="flex-grow">
-              <h2 class="text-gray-900 title-font font-medium">Holden Caulfield</h2>
+              <h2 class="text-gray-900 title-font font-medium">Spipixel</h2>
               <p class="text-gray-500">UI Designer</p>
             </div>
           </div>
         </div>
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
           <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/84x84">
+            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
             <div class="flex-grow">
-              <h2 class="text-gray-900 title-font font-medium">Henry Letham</h2>
-              <p class="text-gray-500">CTO</p>
+              <h2 class="text-gray-900 title-font font-medium">Hyper8107</h2>
+              <p class="text-gray-500">Server Manager</p>
             </div>
           </div>
         </div>
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
           <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/88x88">
+            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
             <div class="flex-grow">
-              <h2 class="text-gray-900 title-font font-medium">Oskar Blinde</h2>
+              <h2 class="text-gray-900 title-font font-medium">Spipixel</h2>
               <p class="text-gray-500">Founder</p>
             </div>
           </div>
         </div>
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
           <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/90x90">
+            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
             <div class="flex-grow">
-              <h2 class="text-gray-900 title-font font-medium">John Doe</h2>
-              <p class="text-gray-500">DevOps</p>
+              <h2 class="text-gray-900 title-font font-medium">Spipixel</h2>
+              <p class="text-gray-500">Programmer</p>
             </div>
           </div>
         </div>
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
           <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/94x94">
+            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
             <div class="flex-grow">
-              <h2 class="text-gray-900 title-font font-medium">Martin Eden</h2>
-              <p class="text-gray-500">Software Engineer</p>
+              <h2 class="text-gray-900 title-font font-medium">Spipixel</h2>
+              <p class="text-gray-500">Manager</p>
             </div>
           </div>
         </div>
-        <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-          <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/98x98">
-            <div class="flex-grow">
-              <h2 class="text-gray-900 title-font font-medium">Boris Kitua</h2>
-              <p class="text-gray-500">UX Researcher</p>
-            </div>
-          </div>
-        </div>
-        <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-          <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/100x90">
-            <div class="flex-grow">
-              <h2 class="text-gray-900 title-font font-medium">Atticus Finch</h2>
-              <p class="text-gray-500">QA Engineer</p>
-            </div>
-          </div>
-        </div>
-        <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-          <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/104x94">
-            <div class="flex-grow">
-              <h2 class="text-gray-900 title-font font-medium">Alper Kamu</h2>
-              <p class="text-gray-500">System</p>
-            </div>
-          </div>
-        </div>
-        <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-          <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/108x98">
-            <div class="flex-grow">
-              <h2 class="text-gray-900 title-font font-medium">Rodrigo Monchi</h2>
-              <p class="text-gray-500">Product Manager</p>
-            </div>
-          </div>
-        </div>
+
       </div>
     </div>
   </section>
