--- a/Shop/Windows_11_project_2_8_22_24_00.html
+++ b/Shop/Windows_11_project_2_8_22_24_00.html
@@ -264,7 +264,7 @@
           <h2 class="text-sm tracking-widest title-font mb-1 font-medium">Testing</h2>
           <h1 class="text-5xl text-gray-900 leading-none flex items-center pb-4 mb-4 border-b border-gray-200">
             <span>Free</span>
-            <span class="text-lg ml-1 font-normal text-gray-500"></span>
+            <span class="text-lg ml-1 font-normal text-gray-500">Testing</span>
           </h1>
           <p class="flex items-center text-gray-600 mb-2">
             <span class="w-4 h-4 mr-2 inline-flex items-center justify-center bg-gray-400 text-white rounded-full flex-shrink-0">
