--- a/test/windows 11-20221208T152201Z-001/windows 11/index.html
+++ b/test/windows 11-20221208T152201Z-001/windows 11/index.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Windows 11</title>
     <link rel="stylesheet" href="./css/style.css">
+<style>
+    .prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
+</style>
+
 </head>
-<body class="background">
+<body class="prevent-select background">
 
     <div id="exp" class="app">
         <img src="./wallpapers/Windows-11-File-Explorer-with-Tabs-and-new-navigation-pane.png" alt="">
