--- a/Blog.html
+++ b/Blog.html
@@ -11,11 +11,17 @@
     <link rel="stylesheet" type="text/css" href="./MoviesFolder/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="stl.css">
+    <link rel="stylesheet" href="./CSS/loader.css">
+    <link rel="stylesheet" type="text/css" href="Background.css">
 </head>
 
-<body>
+<body onload="myFunction()" style="overflow-x: hidden; margin:0;">
   
-  <header class="text-black-600 body-font disp">
+<div id="loader"></div>
+
+<div style="display:none;" id="myDiv" class="animate-bottom">
+
+  <header class="prevent-select text-black-600 body-font disp">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <div>
         <img src="./Images/logo.png" alt="">
@@ -23,7 +29,7 @@
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l	flex flex-wrap items-center text-base justify-center">
         <div class="navbar flex-div">
           <img src="./Images/home.png" alt="">
-            <a class="mr-5 hover:bg-indigo-600 " style="  color: black;  font-weight: 500;" href="index.html">Home</a>
+            <a class="mr-5 hover:bg-indigo-600 " style="  color: black;  font-weight: 500;" href="https://spipixel.tk">Home</a>
           <img src="./Images/shop.png" alt="">
             <a class="mr-5 hover:text-gray-900" style=" transition: 0.2s; color: black;  font-weight: 500" href="Shop.html">Shop</a>
           <img src="./Images/Blog.png" alt="">
@@ -49,13 +55,11 @@
     </div>
   </header>
 
-
-
   <section class="text-gray-600 body-font">
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-wrap w-full mb-20">
         <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
-          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">Spipixel </h1>
+
           <div class="h-1 w-20 bg-indigo-500 rounded"></div>
         </div>
         <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">This is a blog page in which a new products and videos are shown first , when they are published in the web </p>
@@ -63,7 +67,7 @@
       <div class="flex flex-wrap -m-4">
         <div class="xl:w-1/4 md:w-1/2 p-4">
           <div class="bg-gray-100 p-6 rounded-lg">
-            <img style="cursor: pointer;" onclick="document.location.href='./Shop/Windows_11_project_2_8_22_24_00.html'" class="h-40 rounded w-full object-cover object-center mb-6" src="./Images/Shop/wp7520964.png" alt="content">
+            <img style="cursor: pointer;" onclick="document.location.href='./Shop/Windows_11_project_2_8_22_24_00.html'" class="prevent-select h-40 rounded w-full object-cover object-center mb-6" src="./Images/Shop/wp7520964.png" alt="content">
             <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">Spipixel</h3>
             <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Windows 11</h2>
             <p class="leading-relaxed text-base">This is a windows 11 project that made by spipixel and I provide the source code of it for free </p>
@@ -71,7 +75,7 @@
         </div>
         <div class="xl:w-1/4 md:w-1/2 p-4">
           <div class="bg-gray-100 p-6 rounded-lg">
-            <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/721x401" alt="content">
+            <img class="prevent-select h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/721x401" alt="content">
             <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">Spipixel</h3>
             <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Spipixel</h2>
             <p class="leading-relaxed text-base">Coming Soon</p>
@@ -79,7 +83,7 @@
         </div>
         <div class="xl:w-1/4 md:w-1/2 p-4">
           <div class="bg-gray-100 p-6 rounded-lg">
-            <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/722x402" alt="content">
+            <img class="prevent-select h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/722x402" alt="content">
             <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">Spipixel</h3>
             <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Coming Soon</h2>
             <p class="leading-relaxed text-base">Coming Soon</p>
@@ -87,7 +91,7 @@
         </div>
         <div class="xl:w-1/4 md:w-1/2 p-4">
           <div class="bg-gray-100 p-6 rounded-lg">
-            <img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403" alt="content">
+            <img class="prevent-select h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/723x403" alt="content">
             <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font">Spipixel</h3>
             <h2 class="text-lg text-gray-900 font-medium title-font mb-4">Coming Soon</h2>
             <p class="leading-relaxed text-base">Coming Soon</p>
@@ -106,7 +110,7 @@
       <div class="flex flex-wrap -m-2">
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
           <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
+            <img alt="team" class="prevent-select w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
             <div class="flex-grow">
               <h2 class="text-gray-900 title-font font-medium">Spipixel</h2>
               <p class="text-gray-500">UI Designer</p>
@@ -115,7 +119,7 @@
         </div>
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
           <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
+            <img alt="team" class="prevent-select w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
             <div class="flex-grow">
               <h2 class="text-gray-900 title-font font-medium">Hyper8107</h2>
               <p class="text-gray-500">Server Manager</p>
@@ -124,7 +128,7 @@
         </div>
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
           <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
+            <img alt="team" class="prevent-select w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
             <div class="flex-grow">
               <h2 class="text-gray-900 title-font font-medium">Spipixel</h2>
               <p class="text-gray-500">Founder</p>
@@ -133,7 +137,7 @@
         </div>
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
           <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
+            <img alt="team" class="prevent-select w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
             <div class="flex-grow">
               <h2 class="text-gray-900 title-font font-medium">Spipixel</h2>
               <p class="text-gray-500">Programmer</p>
@@ -142,7 +146,7 @@
         </div>
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
           <div class="h-full flex items-center border-gray-200 border p-4 rounded-lg">
-            <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
+            <img alt="team" class="prevent-select w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="./Images/user-3.png">
             <div class="flex-grow">
               <h2 class="text-gray-900 title-font font-medium">Spipixel</h2>
               <p class="text-gray-500">Manager</p>
@@ -157,7 +161,7 @@
 <hr>
 
 
-<footer class="text-gray-600 body-font">
+<footer class="prevent-select text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
     <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
       <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
@@ -242,6 +246,8 @@
     </div>
   </div>
 </footer>
+</div>
 
+<script src="./JS/Loader.js"></script>
 </body>
 </html>
