--- a/Shop.html
+++ b/Shop.html
@@ -16,23 +16,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-ios.css">
+    <link rel="stylesheet" href="./CSS/loader.css">
+    
 
-    <script type="text/javascript">
-      $(document).ready(function() {
-        $(".modal".on('submit',function(e) {
-          e.preventDefault();
-          var name=$(".username").val();
-          var e=$(".email").val();
-          var l=$(".link").val();
-          $=post("",{name:username,email:email,link:link},function() {
-            alert("Done");
-          })
-        }))
-      });
-    </script>
 
-</head>
-<body>
 
 <style>
   body {font-family: Arial, Helvetica, sans-serif;}
@@ -146,7 +133,15 @@ hr {
 }
 </style>
 
-<header class="text-black-600 body-font disp">
+</head>
+<body onload="myFunction()" style="overflow-x: hidden; margin:0;" >
+
+  <div id="loader"></div>
+
+<div style="display:none;" id="myDiv" class="animate-bottom">
+
+
+  <header class="prevent-select text-black-600 body-font disp">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <div>
         <img src="./Images/logo.png" alt="">
@@ -154,7 +149,7 @@ hr {
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l	flex flex-wrap items-center text-base justify-center">
         <div class="navbar flex-div">
           <img src="./Images/home.png" alt="">
-            <a class="mr-5 hover:bg-indigo-600 " style="  color: black;  font-weight: 500;" href="index.html">Home</a>
+            <a class="mr-5 hover:bg-indigo-600 " style="  color: black;  font-weight: 500;" href="https://spipixel.tk">Home</a>
           <img src="./Images/shop.png" alt="">
             <a class="mr-5 hover:text-gray-900" style="border-radius: 15px; background-color: #48aad8; transition: 0.2s; color: black;  font-weight: 500" href="Shop.html">Shop</a>
           <img src="./Images/Blog.png" alt="">
@@ -182,12 +177,10 @@ hr {
 
 <hr>
 
-
-
 <section class="text-gray-600 body-font overflow-hidden">
         <div class="container px-5 py-24 mx-auto">
           <div class="lg:w-4/5 mx-auto flex flex-wrap">
-            <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="./Images/Website.jpg">
+            <img alt="ecommerce" class="prevent-select lg:w-1/2 w-full lg:h-auto h-64 object-cover object-center rounded" src="./Images/Website.jpg">
             <div class="lg:w-1/2 w-full lg:pl-10 lg:py-6 mt-6 lg:mt-0">
               <h2 class="text-sm title-font text-gray-500 tracking-widest">Offical Source Code</h2>
               <h1 class="text-gray-900 text-3xl title-font font-medium mb-1">Created by Spipixel</h1>
@@ -233,8 +226,8 @@ hr {
                 <div class="flex ml-6 items-center">
                   <span class="mr-3">Versions</span>
                   <div class="relative">
-                    <select name="links" id="" size="1" onchange="document.location.href=this.value;" class="rounded border appearance-none border-gray-300 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-200 focus:border-indigo-500 text-base pl-3 pr-10">
-                      <option style="color: blue;" value="Shop.html">Select Version</option>
+                    <select style="background: #9fe0ffd3 ; outline: none; border: none;" name="links" id="" size="1" onchange="document.location.href=this.value;" class="prevent-select rounded border appearance-none border-gray-300 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-200 focus:border-indigo-500 text-base pl-3 pr-10">
+                      <option style="background: #05a3ff70;" value="Shop.html">Select Version</option>
                       <option value="./Shop/Latest.html">Latest Version</option>
                       <option value="./Shop/Older.html">Older</option>
                     </select>
@@ -246,7 +239,7 @@ hr {
                   </div>
                 </div>
               </div>
-              <div class="flex">
+              <div class="prevent-select flex">
                 <span class="title-font font-medium text-2xl text-gray-900">$0.0</span>
                 <button class="rounded-full w-10 h-10 bg-gray-200 p-0 border-0 inline-flex items-center justify-center text-gray-500 ml-4">
                   <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewbox="0 0 24 24">
@@ -261,11 +254,11 @@ hr {
 
 <hr>
 
-<div style="margin: 10px; margin-block-end: 50px;" class="w3-container">
+<div style="margin: 10px; margin-block-end: 50px;" class="prevent-select w3-container">
   <div  style=" box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); border-radius: 20px; padding: 20px;" class="w3-panel w3-ios-dark-blue">
     <h2>Beta Test</h2>
     <p>Send request to add your project in this page, Remember when you give a link of your project , A information about your project file is assigned with the project file  </p>
-    <button onclick="document.getElementById('id01').style.display='block'" style="width: 180px; background-color:rgb(0, 0, 0) ; border-radius: 20px;" class="w3-button w3-right">Send Requests</button>
+    <button onclick="document.getElementById('id01').style.display='block'" style="border: none; outline: none; width: 180px; background-color:rgb(0, 0, 0) ; border-radius: 20px;" class="w3-button w3-right">Send Requests</button>
   </div>
 </div>
 
@@ -277,7 +270,7 @@ hr {
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
           <div><a href="./Shop/Windows_11_project_2_8_22_24_00.html">
-            <img  class="lg:h-48 md:h-36 w-full object-cover object-center" src="./Images/Shop/wp7520964.png" alt="blog">
+            <img  class="prevent-select lg:h-48 md:h-36 w-full object-cover object-center" src="./Images/Shop/wp7520964.png" alt="blog">
           </a></div>
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">HTML Projects</h2>
@@ -307,7 +300,7 @@ hr {
       </div>
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
+          <img class="prevent-select lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The 400 Blows</h1>
@@ -336,7 +329,7 @@ hr {
       </div>
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
+          <img class="prevent-select lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Shooting Stars</h1>
@@ -372,7 +365,7 @@ hr {
     <div class="flex flex-wrap -m-4">
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
+          <img class="prevent-select lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The Catalyzer</h1>
@@ -401,7 +394,7 @@ hr {
       </div>
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
+          <img class="prevent-select lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The 400 Blows</h1>
@@ -430,7 +423,7 @@ hr {
       </div>
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
+          <img class="prevent-select lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Shooting Stars</h1>
@@ -466,7 +459,7 @@ hr {
     <div class="flex flex-wrap -m-4">
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
+          <img class="prevent-select lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The Catalyzer</h1>
@@ -495,7 +488,7 @@ hr {
       </div>
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
+          <img class="prevent-select lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The 400 Blows</h1>
@@ -524,7 +517,7 @@ hr {
       </div>
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
+          <img class="prevent-select lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Shooting Stars</h1>
@@ -587,28 +580,18 @@ hr {
   </form>
 </div>
 
-<script>
-// Get the modal
-var modal = document.getElementById('id01');
 
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
 
 <hr>
 
-<footer class="text-gray-600 body-font">
+<footer class="prevent-select text-gray-600 body-font">
       <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
         <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
           <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewbox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
-            <span class="ml-3 text-xl"><a href="index.html">Spipixel</a></span>
+            <span class="ml-3 text-xl"><a href="https://spipixel.tk">Spipixel</a></span>
           </a>
           <p class="mt-2 text-sm text-gray-500"><a href="About.html">About</a></p>
         </div>
@@ -634,7 +617,7 @@ window.onclick = function(event) {
             <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
             <nav class="list-none mb-10">
               <li>
-                <a href="index.html" class="text-gray-600 hover:text-gray-800">Home</a>
+                <a href="https://spipixel.tk" class="text-gray-600 hover:text-gray-800">Home</a>
               </li>
               <li>
                 <a href="Contact.css" class="text-gray-600 hover:text-gray-800">Contact</a>
@@ -686,6 +669,35 @@ window.onclick = function(event) {
         </div>
       </div>
 </footer>
+</div>
+
+<script>
+  // Get the modal
+  var modal = document.getElementById('id01');
+  
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
+</script>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    $(".modal".on('submit',function(e) {
+      e.preventDefault();
+      var name=$(".username").val();
+      var e=$(".email").val();
+      var l=$(".link").val();
+      $=post("",{name:username,email:email,link:link},function() {
+        alert("Done");
+      })
+    }))
+  });
+</script>
+
+<script src="./JS/Loader.js"></script>
 
 </body>
 </html>
