--- a/Shop/Windows_11_project_2_8_22_24_00.html
+++ b/Shop/Windows_11_project_2_8_22_24_00.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-ios.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     
+    
 
   <style>
       body {font-family: Arial, Helvetica, sans-serif;}
@@ -132,7 +133,7 @@
   </head>
 <body>
 
-  <header class="text-black-600 body-font">
+  <header class="prevent-select text-black-600 body-font">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <div>
         <img src="../Images/logo.png" alt="">
@@ -165,7 +166,7 @@
 
 <hr>
 
-<div style="margin: 10px; margin-block-end: 50px;" class="w3-container">
+<div style="margin: 10px; margin-block-end: 50px;" class="prevent-select w3-container">
   <div  style=" box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); border-radius: 20px; padding: 20px;" class="w3-panel w3-ios-dark-blue">
     <h2>Beta Test</h2>
     <p>Send request to add your project in this page, Remember when you give a link of your project , A information about your project file is assigned with the project file  </p>
@@ -186,7 +187,7 @@
       <div class="container px-5 py-24 mx-auto flex flex-col">
         <div class="lg:w-4/6 mx-auto">
           <div class="rounded-lg h-64 overflow-hidden">
-            <img alt="content" class="object-cover object-center h-full w-full" src="../Images/Shop/wp7520964.png">
+            <img alt="content" class="prevent-select object-cover object-center h-full w-full" src="../Images/Shop/wp7520964.png">
           </div>
           <div class="flex flex-col sm:flex-row mt-10">
             <div class="sm:w-1/3 text-center sm:pr-8 sm:py-8">
@@ -207,7 +208,7 @@
       </div>
     </section>
 
-    <div class="flex flex-wrap -m-4">
+    <div class="prevent-select flex flex-wrap -m-4">
       <div class="p-4 xl:w-1/4 md:w-1/2 w-full">
         <div class="h-full p-6 rounded-lg border-2 border-gray-300 flex flex-col relative overflow-hidden">
           <h2 class="text-sm tracking-widest title-font mb-1 font-medium">Download</h2>
@@ -318,7 +319,7 @@
       <div class="flex flex-wrap -m-4">
         <div class="p-4 md:w-1/3">
           <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-            <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
+            <img class="prevent-select lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
             <div class="p-6">
               <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">Spipixel</h2>
               <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Not Set</h1>
@@ -347,7 +348,7 @@
         </div>
         <div class="p-4 md:w-1/3">
           <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-            <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
+            <img class="prevent-select lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
             <div class="p-6">
               <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">Spipixel</h2>
               <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Not Set</h1>
@@ -376,7 +377,7 @@
         </div>
         <div class="p-4 md:w-1/3">
           <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-            <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
+            <img class="prevent-select lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
             <div class="p-6">
               <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">Spipixel</h2>
               <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Not Set</h1>
@@ -407,7 +408,7 @@
     </div>
   </section>
 
-<footer class="text-gray-600 body-font">
+<footer class="prevent-select text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
     <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
       <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
